// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionStepDetails /> tests renders normal step 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
      >
        <span>
          common.stepName
        </span>
      </div>
      <div
        class="actions"
      >
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.bottom"
          >
            <input
              name="layout"
              type="radio"
              value="BOTTOM"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-bottom"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="matrix(.21166 0 0 .21166 0 .423)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M1 10h18v5H1z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <g
                    fill="#9ea9b4"
                  >
                    <path
                      d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="tabs"
    >
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="STEP_DETAILS"
            id="bp3-tab-title_step-details_STEP_DETAILS"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepDetailsTab"
            >
              details
            </span>
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_INPUT"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="INPUT"
            id="bp3-tab-title_step-details_INPUT"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepInputTab"
            >
              common.input
            </span>
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_OUTPUT"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="OUTPUT"
            id="bp3-tab-title_step-details_OUTPUT"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepOutputTab"
            >
              outputLabel
            </span>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
          class="bp3-tab-panel"
          id="bp3-tab-panel_step-details_STEP_DETAILS"
          role="tabpanel"
        >
          <div
            class="detailsTab"
          >
            <table
              class="detailsTable"
            >
              <tbody>
                <tr>
                  <th>
                    startedAt:
                  </th>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <th>
                    endedAt:
                  </th>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <th>
                    pipeline.duration:
                  </th>
                  <td>
                    <div>
                      MOCK DURATION
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
            <div
              class="main"
              data-mode="step-details"
            >
              <div
                class="header"
              >
                <div>
                  execution.stepLogs
                </div>
                <div
                  class="rhs"
                >
                  <div
                    class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
                    data-name=""
                  >
                    <span
                      class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
                      data-icon="thinner-search"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                    <input
                      class="bp3-input  ExpandingSearchInput--find"
                      dir="auto"
                      placeholder="Search"
                      style="padding-right: 130px;"
                      type="search"
                      value=""
                    />
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-settings"
                    >
                      <svg
                        fill="none"
                        height="22"
                        viewBox="0 0 18 18"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                          fill="#ccc"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                          fill="#ccc"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="full-screen"
                    >
                      <svg
                        fill="none"
                        height="22"
                        viewBox="0 0 24 24"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                          stroke="currentColor"
                          stroke-linecap="round"
                        />
                      </svg>
                    </span>
                  </button>
                  <a
                    class="toConsoleView"
                    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
                  >
                    <span>
                      consoleView
                    </span>
                  </a>
                </div>
              </div>
              <pre
                class="container"
              >
                <div
                  class="noLogs"
                >
                  common.logs.noLogsText
                </div>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepDetails /> tests retried steps does not fetches data for retry step, if already present 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
        data-name="Already_Present_Data"
      >
        <span>
          common.stepName
        </span>
      </div>
      <div
        class="actions"
      >
        <div
          class="bp3-popover-wrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main retry Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-status=""
              data-testid="retry-logs"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.retryStepCount
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main retryStatusIcon"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.bottom"
          >
            <input
              name="layout"
              type="radio"
              value="BOTTOM"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-bottom"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="matrix(.21166 0 0 .21166 0 .423)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M1 10h18v5H1z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <g
                    fill="#9ea9b4"
                  >
                    <path
                      d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="tabs"
    >
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="STEP_DETAILS"
            id="bp3-tab-title_step-details_STEP_DETAILS"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepDetailsTab"
            >
              details
            </span>
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_INPUT"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="INPUT"
            id="bp3-tab-title_step-details_INPUT"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepInputTab"
            >
              common.input
            </span>
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_OUTPUT"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="OUTPUT"
            id="bp3-tab-title_step-details_OUTPUT"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepOutputTab"
            >
              outputLabel
            </span>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
          class="bp3-tab-panel"
          id="bp3-tab-panel_step-details_STEP_DETAILS"
          role="tabpanel"
        >
          <div
            class="detailsTab"
          >
            <table
              class="detailsTable"
            >
              <tbody>
                <tr>
                  <th>
                    startedAt:
                  </th>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <th>
                    endedAt:
                  </th>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <th>
                    pipeline.duration:
                  </th>
                  <td>
                    <div>
                      MOCK DURATION
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
            <div
              class="main"
              data-mode="step-details"
            >
              <div
                class="header"
              >
                <div>
                  execution.stepLogs
                </div>
                <div
                  class="rhs"
                >
                  <div
                    class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
                    data-name=""
                  >
                    <span
                      class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
                      data-icon="thinner-search"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                    <input
                      class="bp3-input  ExpandingSearchInput--find"
                      dir="auto"
                      placeholder="Search"
                      style="padding-right: 130px;"
                      type="search"
                      value=""
                    />
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-settings"
                    >
                      <svg
                        fill="none"
                        height="22"
                        viewBox="0 0 18 18"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                          fill="#ccc"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                          fill="#ccc"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="full-screen"
                    >
                      <svg
                        fill="none"
                        height="22"
                        viewBox="0 0 24 24"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                          stroke="currentColor"
                          stroke-linecap="round"
                        />
                      </svg>
                    </span>
                  </button>
                  <a
                    class="toConsoleView"
                    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
                  >
                    <span>
                      consoleView
                    </span>
                  </a>
                </div>
              </div>
              <pre
                class="container"
              >
                <div
                  class="noLogs"
                >
                  common.logs.noLogsText
                </div>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepDetails /> tests retried steps fetches data for retry step, if not present 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
        data-name="Retried Step 1"
      >
        <span>
          common.stepName
        </span>
      </div>
      <div
        class="actions"
      >
        <div
          class="bp3-popover-wrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main retry Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-status=""
              data-testid="retry-logs"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.retryStepCount
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main retryStatusIcon"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.bottom"
          >
            <input
              name="layout"
              type="radio"
              value="BOTTOM"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-bottom"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="matrix(.21166 0 0 .21166 0 .423)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M1 10h18v5H1z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <g
                    fill="#9ea9b4"
                  >
                    <path
                      d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="tabs"
    >
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="STEP_DETAILS"
            id="bp3-tab-title_step-details_STEP_DETAILS"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepDetailsTab"
            >
              details
            </span>
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_INPUT"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="INPUT"
            id="bp3-tab-title_step-details_INPUT"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepInputTab"
            >
              common.input
            </span>
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_OUTPUT"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="OUTPUT"
            id="bp3-tab-title_step-details_OUTPUT"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepOutputTab"
            >
              outputLabel
            </span>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
          class="bp3-tab-panel"
          id="bp3-tab-panel_step-details_STEP_DETAILS"
          role="tabpanel"
        >
          <div
            class="detailsTab"
          >
            <table
              class="detailsTable"
            >
              <tbody>
                <tr>
                  <th>
                    startedAt:
                  </th>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <th>
                    endedAt:
                  </th>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <th>
                    pipeline.duration:
                  </th>
                  <td>
                    <div>
                      MOCK DURATION
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
            <div
              class="main"
              data-mode="step-details"
            >
              <div
                class="header"
              >
                <div>
                  execution.stepLogs
                </div>
                <div
                  class="rhs"
                >
                  <div
                    class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
                    data-name=""
                  >
                    <span
                      class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
                      data-icon="thinner-search"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                    <input
                      class="bp3-input  ExpandingSearchInput--find"
                      dir="auto"
                      placeholder="Search"
                      style="padding-right: 130px;"
                      type="search"
                      value=""
                    />
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-settings"
                    >
                      <svg
                        fill="none"
                        height="22"
                        viewBox="0 0 18 18"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                          fill="#ccc"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                          fill="#ccc"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="full-screen"
                    >
                      <svg
                        fill="none"
                        height="22"
                        viewBox="0 0 24 24"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                          stroke="currentColor"
                          stroke-linecap="round"
                        />
                      </svg>
                    </span>
                  </button>
                  <a
                    class="toConsoleView"
                    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
                  >
                    <span>
                      consoleView
                    </span>
                  </a>
                </div>
              </div>
              <pre
                class="container"
              >
                <div
                  class="noLogs"
                >
                  common.logs.noLogsText
                </div>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepDetails /> tests retried steps shows loader while loading 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
      >
        <span>
          common.stepName
        </span>
      </div>
      <div
        class="actions"
      >
        <div
          class="bp3-popover-wrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main retry Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-status=""
              data-testid="retry-logs"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.retryStepCount
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main retryStatusIcon"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.bottom"
          >
            <input
              name="layout"
              type="radio"
              value="BOTTOM"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-bottom"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="matrix(.21166 0 0 .21166 0 .423)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M1 10h18v5H1z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <g
                    fill="#9ea9b4"
                  >
                    <path
                      d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="bp3-spinner"
    >
      <div
        class="bp3-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepDetails /> tests retried steps shows step selection 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
      >
        <span>
          common.stepName
        </span>
      </div>
      <div
        class="actions"
      >
        <div
          class="bp3-popover-wrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main retry Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
              data-status=""
              data-testid="retry-logs"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.retryStepCount
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main retryStatusIcon"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.bottom"
          >
            <input
              name="layout"
              type="radio"
              value="BOTTOM"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-bottom"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="matrix(.21166 0 0 .21166 0 .423)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M1 10h18v5H1z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <g
                    fill="#9ea9b4"
                  >
                    <path
                      d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="tabs"
    >
      <div
        class="bp3-tabs Tabs--main Tabs--horizontal"
      >
        <div
          class="bp3-tab-list"
          role="tablist"
        >
          <div
            class="bp3-tab-indicator-wrapper"
            style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
          >
            <div
              class="bp3-tab-indicator"
            />
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
            aria-disabled="false"
            aria-expanded="true"
            aria-selected="true"
            class="bp3-tab"
            data-tab-id="STEP_DETAILS"
            id="bp3-tab-title_step-details_STEP_DETAILS"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepDetailsTab"
            >
              details
            </span>
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_INPUT"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="INPUT"
            id="bp3-tab-title_step-details_INPUT"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepInputTab"
            >
              common.input
            </span>
          </div>
          <div
            aria-controls="bp3-tab-panel_step-details_OUTPUT"
            aria-disabled="false"
            aria-expanded="false"
            aria-selected="false"
            class="bp3-tab"
            data-tab-id="OUTPUT"
            id="bp3-tab-title_step-details_OUTPUT"
            role="tab"
            tabindex="0"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepOutputTab"
            >
              outputLabel
            </span>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
          class="bp3-tab-panel"
          id="bp3-tab-panel_step-details_STEP_DETAILS"
          role="tabpanel"
        >
          <div
            class="detailsTab"
          >
            <table
              class="detailsTable"
            >
              <tbody>
                <tr>
                  <th>
                    startedAt:
                  </th>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <th>
                    endedAt:
                  </th>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <th>
                    pipeline.duration:
                  </th>
                  <td>
                    <div>
                      MOCK DURATION
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
            <div
              class="main"
              data-mode="step-details"
            >
              <div
                class="header"
              >
                <div>
                  execution.stepLogs
                </div>
                <div
                  class="rhs"
                >
                  <div
                    class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
                    data-name=""
                  >
                    <span
                      class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
                      data-icon="thinner-search"
                    >
                      <svg
                        fill="none"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </span>
                    <input
                      class="bp3-input  ExpandingSearchInput--find"
                      dir="auto"
                      placeholder="Search"
                      style="padding-right: 130px;"
                      type="search"
                      value=""
                    />
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="nav-settings"
                    >
                      <svg
                        fill="none"
                        height="22"
                        viewBox="0 0 18 18"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                          fill="#ccc"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                          fill="#ccc"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="full-screen"
                    >
                      <svg
                        fill="none"
                        height="22"
                        viewBox="0 0 24 24"
                        width="22"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                          stroke="currentColor"
                          stroke-linecap="round"
                        />
                      </svg>
                    </span>
                  </button>
                  <a
                    class="toConsoleView"
                    href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
                  >
                    <span>
                      consoleView
                    </span>
                  </a>
                </div>
              </div>
              <pre
                class="container"
              >
                <div
                  class="noLogs"
                >
                  common.logs.noLogsText
                </div>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline
    </div>
  </div>
</div>
`;
